src/objects/Asset.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ACCL__Asset_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Template</label>
        <referenceTo>ACCL__Asset_Template__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Asset_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a product of type &apos;Asset Type&apos;.</description>
        <inlineHelpText>Reference to a product of type &apos;Asset Type&apos;.</inlineHelpText>
        <label>Asset Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Product__c.ACCL__Product_Type__c</field>
                <operation>equals</operation>
                <value>AssetType</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__ERP_Asset_Number__c</fullName>
        <description>Holds the asset number assigned by the ERP.</description>
        <inlineHelpText>Holds the asset number assigned by the ERP.</inlineHelpText>
        <label>ERP Asset Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Manufacturer_Serial_Number__c</fullName>
        <label>Manufacturer Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Note__c</fullName>
        <description>Text notes.</description>
        <label>Asset Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Ownership_Type__c</fullName>
        <description>Describes the ownership type of the asset.</description>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__POS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>POS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>ACCL__POS__c.ACCL__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__POS__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Production_Year__c</fullName>
        <description>Holds the production year of the asset.</description>
        <label>Production Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Service_Phone_Number__c</fullName>
        <label>Service Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Tag_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Auxiliary hidden field, fulfilled by WF field update, in order to avoid duplicate records in standard SerialNumber field in the same Sales Org</description>
        <label>Tag Number</label>
        <length>85</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <description>First date of validity period of the customer asset assignment.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <description>Last date of validity period of the customer asset assignment.</description>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <!---->
    <recordTypes>
        <fullName>ACCL__Asset_Custom</fullName>
        <active>true</active>
        <description>Custom Asset Record Type for ACSF</description>
        <label>Asset Custom</label>
    </recordTypes>
    <validationRules>
        <fullName>ACCL__Date_From_Thru_WithPOS</fullName>
        <active>true</active>
        <description>The Asset time frame must be within the POS time frame.</description>
        <errorConditionFormula>OR(ACCL__Valid_From__c  &lt;  ACCL__POS__r.ACCL__Valid_From__c, ACCL__Valid_Thru__c  &gt;  ACCL__POS__r.ACCL__Valid_Thru__c)</errorConditionFormula>
        <errorMessage>The Asset time frame must be within the POS time frame.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Mandatory_Entries</fullName>
        <active>false</active>
        <description>The mandatory fields can&apos;t be empty.</description>
        <errorConditionFormula>OR( 
ISBLANK(ACCL__Asset_Type__c),
ISBLANK(AccountId),
ISPICKVAL(ACCL__Sales_Org__c,&quot;&quot;),
ISBLANK(ACCL__Description_Language_1__c),
ISBLANK(ACCL__Valid_From__c),
ISBLANK(ACCL__Valid_Thru__c),
ISBLANK(Name) 
)</errorConditionFormula>
        <errorMessage>The mandatory fields can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Asset_Template_Change</fullName>
        <active>true</active>
        <description>The Asset Template can&apos;t be edited after Asset creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Asset_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Asset_Template__c</errorDisplayField>
        <errorMessage>The Asset Template can&apos;t be edited after Asset creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Asset_Type_Change</fullName>
        <active>true</active>
        <description>The Asset Type can&apos;t be edited after Asset creation.</description>
        <errorConditionFormula>ISCHANGED( ACCL__Asset_Type__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Asset_Type__c</errorDisplayField>
        <errorMessage>The Asset Type can&apos;t be edited after Asset creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
</CustomObject>